# heresalon

./: Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  api_doc.md  create_admin.py  pyproject.toml  requirements.txt  run_seed.py  test.sh
backend/migrations/versions/: 029e0ebe96de_add_role_and_description.py  20250929_153831_add_salon_id_to_users_and_description_to_salons.py  39be446c5be7_add_working_hour_to_salon.py  b4c3d3327993_change_staff_and_service.py  b7312924b7e5_add_user_phone_number.py  b8c19fe801a6_add_salonservice_model.py  e7eb14799fce_add_salon_management_models.py
backend/prepare_data/: data.py  seed_db.py
backend/src/: app.py  openai_client.py  settings.py  tasks.py
backend/src/models/: __init__.py  appointment.py  base.py  salon.py  salon_service.py  service.py  staff.py  staff_service.py  user.py  working_hour.py
backend/src/routes/: __init__.py  admin_auth.py  counter.py
backend/src/routes/admin/: __init__.py  appointments.py  dashboard.py  salons.py  services.py  staff.py  users.py
backend/src/routes/api/: __init__.py  appointments.py  auth.py  bot.py  calendar_routes.py  chat.py  salons.py  services.py  staff.py  staff_calendar.py  staffs.py  users.py
backend/src/services/: appointment_service.py  availability_service.py  chatbot_service.py
backend/src/templates/admin/: appointment_detail.html  appointments.html  base.html  dashboard.html  salon_form.html  salons.html  services.html  staff.html  user_form.html  users.html
backend/src/templates/auth/: change_password.html  login.html  (+1 more)
(+36 files in other folders)
