[tool.poetry]
name = "shipyard-template-flask"
version = "1.0.0"
description = ""
authors = ["Shipyard <team@shipyard.build>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.3"
uwsgi = "2.0.23"
flask-sqlalchemy = "3.0.5"
celery = "5.3.4"
flask-migrate = "4.0.5"
sqlalchemy-utils = "0.41.1"
cryptography = "41.0.7"
redis = "5.0.1"
flask-shell-ipython = "0.4.1"
psycopg2-binary = "2.9.9"
boto3 = "1.34.0"
localstack-client = "1.10"
# the following are not directly required, but because flask and other packages don't fully specify their own 
# dependency versions, it's easy to get breaking dependency updates if these are not locked down.
jinja2 = "3.1.2"
markupsafe = "2.1.3"
itsdangerous = "2.1.2"
werkzeug = "2.3.7"
sqlalchemy = "2.0.23"
pyjwt = "2.8.0"
requests = "2.31.0"
flask-cors = "4.0.0"
python-dotenv = "1.0.0"
openai = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
